# zksync-era-verifier

./: .gitignore  Cargo.toml  HEADER-APACHE2  Makefile.toml  README.md
.github/workflows/: CI-build-test-lint.yml  CI-coverage.yml  CI-rustdoc.yml
deserialize/: Cargo.toml
deserialize/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml
scripts/: add_header_if_missed.sh
tests/: Cargo.toml
tests/src/: lib.rs
verifier/: Cargo.toml
verifier/benches/: base.rs
verifier/resources/: dumpdata_for_exstrinsic.py  proof.json
verifier/src/: eth_proof.rs  lib.rs
verifier/src/eth_proof/: gates.rs  vk.rs
verifier/tests/: integration.rs
