[package]
description = "A deserializer bn256 fields from byte streams"
name = "zksync-era-verifier-deserialize"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
snafu = { version = "0.8.2" }
bellman.workspace = true

[dev-dependencies]
hex-literal = "0.4.1"
rstest.workspace = true
