[package]
name = "zksync-era-verifier-tests"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde = { version = "1.0.198", features = ["derive"] }
bellman = { package = "bellman_ce", git = "https://github.com/matter-labs/bellman", branch = "snark-wrapper" }
deserialize.workspace = true
ethereum-types.workspace = true
pretty_assertions = "1.4.0"
